# Pokedex

./: .gitignore  CMakeLists.txt
database/: move.txt  pokemon.txt
forms/: bulbasaur.ui  mainwindow.ui  ui_bulbasaur.h
forms/item/: itemwindow.ui  ui_itemwindow.h
forms/mainwindow/: aboutpokedex.ui  mainwindow.ui  ui_aboutpokedex.h  ui_mainwindow.h
forms/move/: movewindow.ui  ui_movewindow.h
forms/pokemon/: bulbasaur.ui  pokemonwindow.ui  ui_pokemonwindow.h
include/: aboutpokedex.h  mainwindow.h
include/ui/: mainwindow.h
include/ui/item/: itemwindow.h
include/ui/mainwindow/: mainwindow.h
include/ui/move/: movewindow.h
include/ui/pokemon/: bulbasaur.h  pokemonwindow.h
resources/database/: Database.qrc  Database_rc.py  move.txt
src/: aboutpokedex.cpp  main.cpp  mainwindow.cpp
src/ui/: aboutpokedex.cpp  bulbasaur.cpp  mainwindow.cpp
src/ui/item/: itemwindow.cpp
src/ui/mainwindow/: aboutpokedex.cpp  mainwindow.cpp
src/ui/move/: movewindow.cpp
src/ui/pokemon/: bulbasaur.cpp  pokemonwindow.cpp
